{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 5,
  "lineage": "ba3d300c-3f23-8ef0-61f8-a646711ff793",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_jenkins_server_lespagnol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b5a531c0da96276",
            "arn": "arn:aws:ec2:eu-west-3:490714423364:instance/i-0404f67fe2337947f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0404f67fe2337947f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tp_dev_ynov",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b084947a148e0089",
            "private_dns": "ip-172-31-0-103.eu-west-3.compute.internal",
            "private_ip": "172.31.0.103",
            "public_dns": "ec2-52-47-209-1.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.209.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb4d509c3d87e9dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5b9bd732",
            "tags": {
              "Name": "instance_jenkins_server_lespagnol"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-93f38df8"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_jenkins_jenkins_lespagnol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490714423364:security-group/sg-09c14a0a6be777720",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c14a0a6be777720",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Jenkins port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "security_group_jenkins_jenkins_lespagnol",
            "name_prefix": "",
            "owner_id": "490714423364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_jenkins_jenkins_lespagnol"
            },
            "timeouts": null,
            "vpc_id": "vpc-891839e0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_jenkins_ssh_lespagnol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490714423364:security-group/sg-08e6a232cf6eae41c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e6a232cf6eae41c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_group_jenkins_ssh_lespagnol",
            "name_prefix": "",
            "owner_id": "490714423364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_jenkins_ssh_lespagnol"
            },
            "timeouts": null,
            "vpc_id": "vpc-891839e0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_jenkins_web_lespagnol",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490714423364:security-group/sg-01290e66fa67dd019",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01290e66fa67dd019",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_jenkins_web_lespagnol",
            "name_prefix": "",
            "owner_id": "490714423364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_jenkins_web_lespagnol"
            },
            "timeouts": null,
            "vpc_id": "vpc-891839e0"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}